tgloss:"rodent of the genera Marmota" ([[WT:EDIT|Assisted]]) <marmot#7802347>

--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -31,7 +31,7 @@
 * [[yellow-bellied marmot]]
 
 ====Translations====
-{{trans-top}}
+{{trans-top|rodent of the genera Marmota}}
 * Albanian: {{t-|sq|marmota|xs=Albanian}}
 * Armenian: {{t-|hy|արջամուկ|tr=arǰamuk|sc=Armn|xs=Armenian}}
 * [[Basque]]: [[marmota]]
