t+id:[[babi hutan]] ([[WT:EDIT|Assisted]]) <wild boar#7807447>

--- a/en/w/wild boar.8245.wikitext
+++ b/en/w/wild boar.8245.wikitext
@@ -36,7 +36,7 @@
 * Greek: {{t+|el|αγριογούρουνο|n|tr=agriogοúrοuno}}, {{t+|el|αγριόχοιρος|m|tr=agrióchoiros}}
 * Hungarian: {{t+|hu|vaddisznó}}
 * Icelandic: {{t-|is|villisvín}}
-* {{trreq|Indonesian}}
+* Indonesian: {{t|id|babi hutan}}
 * Irish: [[torc]], [[torc allta]]
 * Italian: {{t+|it|cinghiale|m}}
 * Japanese: [[イノシシ]] ([[猪]], ''inoshishi'')
