--- a/en/w/wild boar.8245.wikitext
+++ b/en/w/wild boar.8245.wikitext
@@ -40,6 +40,7 @@
 * Irish: [[torc]], [[torc allta]]
 * Italian: {{t+|it|cinghiale|m}}
 * Japanese: [[イノシシ]] ([[猪]], ''inoshishi'')
+* [[Javanese]]: {{t|jv|celeng}}
 * Korean: [[멧돼지]] ''met-dwaeji''
 {{trans-mid}}
 * [[Ladin]]: [[porcel salvare]]
@@ -63,6 +64,7 @@
 * Slovak: [[diviak]] {{m}}, [[kanec]] {{m}}, [[diviak lesný]]
 * Slovene: [[divji prašič]]
 * Spanish: {{t+|es|jabalí|m}}
+* [[Sundanese]]: {{t|su|bagong}}
 * Swedish: {{t+|sv|vildsvin}}
 * Turkish: {{t+|tr|yaban domuzu}}
 * Ukrainian: [[кабан]], [[вепр]] ([[kaban]], [[vepr]])
