--- a/en/t/thermalization.855949.wikitext
+++ b/en/t/thermalization.855949.wikitext
@@ -10,7 +10,7 @@
 # {{physics}} The process of reaching [[thermal]] [[equilibrium]] by mutual [[interaction]]
 
 ====Translations====
-{{trans-top}}
+{{trans-top|The process of reaching thermal equilibrium}}
 * Italian: {{t-|it|termalizzazione|f}}
 {{trans-mid}}
 {{trans-bottom}}
