--- a/en/t/track spike.774841.wikitext
+++ b/en/t/track spike.774841.wikitext
@@ -6,7 +6,7 @@
 # A lightweight shoe with spikes screwed into its bottom in order to maximize traction (and therefore performance) when running or jumping.
 
 ====Translations====
-{{trans-top}}
+{{trans-top|lightweight shoe for running}}
 * Finnish: {{t-|fi|piikkikenkä}}, {{t-|fi|piikkari}}
 {{trans-mid}}
 {{trans-bottom}}
