--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -44,7 +44,7 @@
 
 ====Translations====
 {{trans-top|commercial solicitation}}
-* Arabic: [[إِعْلان]] , [[إِيذان]]
+* Arabic: [[إِعْلان]] , [[إِيذان]],  {{t|ar|إيذان|m|tr='idhaan|alt=إِيذان|sc=Arab}},  {{t|ar|إعلان|m|tr='i3laan|sc=Arab}}
 * Armenian: [[գովազդ]] (govazd)
 * [[Breton]]: [[bruderezh]] {{m}}
 * Bulgarian: {{t+|bg|реклама|f|sc=Cyrl}}
@@ -57,13 +57,13 @@
 * French: {{t+|fr|publicité|f}}, {{t+|fr|pub|f}}, {{t+|fr|annonce|f}}
 * German: [[Anzeige]] {{f}}, [[Werbung]] {{f}}, [[Annonce]] {{f}}, [[Reklameanzeige]] {{f}}
 * Greek: {{t+|el|διαφήμιση|f|tr=diafimisi|sc=Grek}}
-* Hebrew: [[פרסומת]] (pirsomet) {{f}}
+* Hebrew: [[פרסומת]] (pirsomet) {{f}},  {{t|he|פרסומת|f|tr=pirsomet|sc=Hebr}}
 * Hungarian: {{t+|hu|hirdetés}}, {{t+|hu|reklám}}
 * Icelandic: {{t+|is|auglýsing|f}}
 * Indonesian: {{t+|id|iklan|xs=Indonesian}}, {{t-|id|reklame|xs=Indonesian}}
 * [[Interlingua]]: [[annuncio]], [[publicitate]], [[reclamo]], [[propaganda]]
 * Italian: {{t+|it|annuncio|m}}, {{t-|it|pubblicità|f}}
-* Japanese: [[広告]] (こうこく, kōkoku), [[CM]] (シーエム, shī-emu)
+* Japanese: [[広告]] (こうこく, kōkoku), [[CM]] (シーエム, shī-emu),  {{t|ja|広告|tr=こうこく, kōkoku|sc=Jpan}},  {{t|ja|CM|tr=シーエム, shī-emu|sc=Jpan}}
 * Korean: [[광고]] (gwang go)
 {{trans-mid}}
 * Latin: [[prescriptio]] {{f}} (-ionis)
@@ -71,17 +71,17 @@
 * [[Macedonian]]: {{t-|mk|реклама|f|tr=rekláma|sc=Cyrl|xs=Macedonian}}
 * Malay: {{t-|ms|iklan|xs=Malay}}
 * Maltese: [[riklam]], [[pubbliċità]], [[tgħarif kummerċjali]]
-* Mandarin: {{zh-ts|廣告|广告}} (guǎnggào)
+* Mandarin: {{zh-ts|廣告|广告}} (guǎnggào),  {{t|zh|廣告|sc=Hani}},  {{t|zh|广告|tr=guǎnggào|sc=Hani}}
 * Norwegian: [[reklame]] [[annonse]]
 * Polish: [[ogłoszenie]] {{n}}, [[reklama]] {{f}}, [[anons]] {{m}}
 * Portuguese: {{t+|pt|anúncio|m}}, {{t+|pt|publicidade|f}}, {{t-|pt|reclame|m}}, {{t+|pt|propaganda|f}}
 * Romanian: [[anunţ]] {{n}} [[publicitate]] {{f}}, [[reclamă]] {{f}}
-* Russian: [[объявление]], [[реклама]], [[анонс]], [[заявление]], [[извещение]]
+* Russian: [[объявление]], [[реклама]], [[анонс]], [[заявление]], [[извещение]],  {{t|ru|реклама|f|tr=rekláma|sc=Cyrl}},  {{t|ru|объявление|n|tr=ob”javlénije|sc=Cyrl}},  {{t|ru|анонс|m|tr=anóns|sc=Cyrl}},  {{t|ru|заявление|n|tr=zajavlénije|sc=Cyrl}},  {{t|ru|извещение|n|tr=izveščénije|sc=Cyrl}}
 * Serbian: [[oglas]], [[objavljenje]], [[izveštenje]]
 * Slovene: {{t+|sl|oglas|m}}, {{t-|sl|reklama|f}}
 * Spanish: {{t-|es|anuncio|m}}, {{t+|es|publicidad|f}}, {{t+|es|reclamo|m}}
 * Swedish: [[annons]], [[annonsering]], [[reklam]]
-* [[Tamil]]: விளம்பரம்
+* [[Tamil]]: விளம்பரம்,  {{t|ta|விளம்பரம்|sc=Taml}}
 * [[Telugu]]: [[వ్యాపార ప్రకటన]]
 * Turkish: {{t+|tr|reklâm}}, {{t+|tr|ilan}}, {{t+|tr|duyuru}}
 * Vietnamese: {{t+|vi|quảng cáo|xs=Vietnamese}}, {{t+|vi|giới thiệu|xs=Vietnamese}}
