t+vi:[[廣告]] ([[WT:EDIT|Assisted]]) <advertisement#7811540>

--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -85,7 +85,7 @@
 * [[Tamil]]: {{t|ta|விளம்பரம்|sc=Taml}}
 * [[Telugu]]: [[వ్యాపార ప్రకటన]]
 * Turkish: {{t+|tr|reklâm}}, {{t+|tr|ilan}}, {{t+|tr|duyuru}}
-* Vietnamese: {{t+|vi|quảng cáo|xs=Vietnamese}}, {{t+|vi|giới thiệu|xs=Vietnamese}}
+* Vietnamese: {{t+|vi|quảng cáo|xs=Vietnamese}}, {{t+|vi|giới thiệu|xs=Vietnamese}},  {{t|vi|廣告}}
 * [[Volapük]]: [[noted]], [[reklam]], [[nunam]]
 * [[West Frisian]]: [[advertinsje]], [[oankundiging]]
 {{trans-bottom}}
