--- a/en/b/bled.6802.wikitext
+++ b/en/b/bled.6802.wikitext
@@ -9,20 +9,8 @@
 
 # {{past of|[[bleed]]}}
 
-[[el:bled]]
-[[fr:bled]]
-[[ko:bled]]
-[[hu:bled]]
-[[no:bled]]
-[[oc:bled]]
-[[ro:bled]]
-[[ru:bled]]
-[[sl:bled]]
-[[te:bled]]
-[[vi:bled]]
-[[vo:bled]]
-[[zh:bled]]
 ----
+
 ==Old English==
 
 ===Etymology===
@@ -42,3 +30,35 @@ Derivative of ''[[blowan|blōwan]]'' "to bloom, blossom"
 
 ===Synonyms===
 * [[ofett]]
+
+----
+
+==Serbo-Croatian==
+
+===Etymology===
+From {{proto|Slavic|blědъ|lang=sh}}.
+
+===Alternative forms===
+* (''Ijekavian''): {{l|sh|blijed|blijȇd}}
+
+===Pronunciation===
+* {{IPA|/blêːd/|lang=sh}}
+
+===Adjective===
+{{sh-adjective|head=blȇd|def=bledi|def_a=blȇdī|comp=bleđi|comp_a=blȅđī|r|блед|бле̑д}}
+
+# [[pale]], [[pallid]]
+
+[[el:bled]]
+[[fr:bled]]
+[[ko:bled]]
+[[hu:bled]]
+[[no:bled]]
+[[oc:bled]]
+[[ro:bled]]
+[[ru:bled]]
+[[sl:bled]]
+[[te:bled]]
+[[vi:bled]]
+[[vo:bled]]
+[[zh:bled]]
