--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -202,12 +202,16 @@ From {{etyl|la|ca}} {{term|lang=la|simplex}}.
 
 ==Esperanto==
 
+===Etymology===
+{{term|simpla|simpl-|lang=eo}} + {{term|-e|lang=eo}}
+
+===Pronunciation===
+* {{IPA|/ˈsimple/|lang=eo}}
+
 ===Adverb===
 {{eo-adv}}
 
 # [[simply]]
-
-[[Category:Esperanto adverbs]]
 
 ----
 
