--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -177,8 +177,8 @@
 From {{etyl|la|ca}} {{term|lang=la|simplex}}.
 
 ===Pronunciation===
-* {{a|Eastern Catalan}} {{IPA|lang=ca|[símpɫə]}}
-* {{a|Western Catalan}} {{IPA|lang=ca|[símpɫe]}}
+* {{a|Eastern Catalan}} {{IPA|lang=ca|[ˈsimpɫə]}}
+* {{a|Western Catalan}} {{IPA|lang=ca|[ˈsimpɫe]}}
 
 ===Adjective===
 {{infl|ca|adjective|g=m|g2=f|plural|simples|obsolete feminine|simpla}}
