t+nv:[[tłʼohtsoh ntłʼizígíí]] ([[WT:EDIT|Assisted]]) <bamboo#7825505>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -44,6 +44,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Lao: {{t-|lo|ໄມ້ໄຜ່|tr=mai-phai|sc=Laoo|xs=Lao}}
 * [[Macedonian]]: {{t|mk|бамбус|m|tr=bámbus}}
 * Malay: [[pokok]] [[buluh]]
+* Navajo: {{tø|nv|tłʼohtsoh ntłʼizígíí}}
 * Portuguese: {{t+|pt|bambu|m}}
 * Russian: {{t+|ru|бамбук|m}}
 * Serbian: [[trskovača]] {{f}}
