--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -32,6 +32,7 @@ MAAHX-im-muhm
 ====Translations====
 {{trans-top|highest limit}}
 * Chinese: [[最]][[大]] (zui da, zui4 da4)
+* Esperanto: {{t|eo|maksimumo}}
 * Finnish: {{t+|fi|maksimi}}
 * French: [[maximum'French|maximum]]
 * German: {{t+|de|Maximum|n}}
