--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -71,6 +71,7 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 {{trans-top|group of plants or animals having similar appearance}}
 * [[Basque]]: {{t|eu|espezie}}
 * [[Catalan]]: {{t|ca|espècie|f}}
+* Czech: {{t|cs|druh}}
 * Danish: {{t|da|art|c}}
 {{trans-mid}}
 * Finnish: {{t+|fi|laji}}
