tgloss:"The behaviour of a semiconductor" ([[WT:EDIT|Assisted]]) <semiconduction#7868864>

--- a/en/s/semiconduction.855489.wikitext
+++ b/en/s/semiconduction.855489.wikitext
@@ -6,7 +6,7 @@
 # {{physics}} The behaviour of a [[semiconductor]]
 
 ====Translations====
-{{trans-top}}
+{{trans-top|The behaviour of a semiconductor}}
 * Italian: {{t-|it|semiconduzione|f}}
 {{trans-mid}}
 {{trans-bottom}}
