--- a/en/w/white gold.855391.wikitext
+++ b/en/w/white gold.855391.wikitext
@@ -3,12 +3,13 @@
 ===Noun===
 {{en-noun|sg=[[white]] [[gold]]}}
 
-#A precious metal [[alloy]] consisting of gold and a platinum group metal such as [[platinum]] or [[palladium]] or other [[white metal]] such as [[nickel]].
+# A precious metal [[alloy]] consisting of gold and a platinum group metal such as [[platinum]] or [[palladium]] or other [[white metal]] such as [[nickel]].
 
 ====See also====
-*{{pedia}}
+* {{pedia}}
 
 ====Translations====
+{{rfc-tsort|duplicate language: Swedish}}
 {{trans-top|A precious metal alloy consisting of gold and a platinum group metal}}
 * Finnish: {{t-|fi|valkokulta}}
 * Hungarian: {{t|hu|fehérarany}}
