iwiki +[[:kn:consume]] <consume#7890067>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -123,6 +123,7 @@ From {{etyl|la}} ''[[consumere]]''.
 [[io:consume]]
 [[id:consume]]
 [[it:consume]]
+[[kn:consume]]
 [[ku:consume]]
 [[lo:consume]]
 [[hu:consume]]
