iwiki +[[:hr:blow]] <blow#7910753>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -349,6 +349,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 [[gl:blow]]
 [[ko:blow]]
 [[hy:blow]]
+[[hr:blow]]
 [[io:blow]]
 [[it:blow]]
 [[kn:blow]]
