--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -14,7 +14,7 @@
 # A device designed to be placed in the mouth in order to make a whistling sound.
 # A shrill, high-pitched sound made by whistling.
 # Any high-pitched sound similar to the sound made by whistling.
-# {{CockneyRS}} A [[suit]].
+# {{CockneyRS}} A [[suit]] (from ''whistle and flute'').
 
 ====Derived terms====
 {{rel-top3|Terms derived from the noun ''whistle''}}
