--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -15,6 +15,8 @@
 # A shrill, high-pitched sound made by whistling.
 # Any high-pitched sound similar to the sound made by whistling.
 # {{CockneyRS}} A [[suit]] (from ''whistle and flute'').
+#* '''2005''', Wally Payne, ''A Minority of One: A Monkey's Tale Continued''
+#*: We soldiers changed into our No.1 dress uniforms, Sid into his best '''whistle''' and we set off for the church.
 
 ====Derived terms====
 {{rel-top3|Terms derived from the noun ''whistle''}}
