--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -108,7 +108,7 @@
 * Norwegian: [[mølle]] {{m}}, [[fabrikk]] {{m}} (''general'')
 * Polish: {{t+|pl|fabryka|f}}
 * [[Scottish Gaelic]]: {{t-|gd|muileann|m|f|xs=Scottish Gaelic}}
-* Spanish: {{t-|es|fabrica|f}}
+* Spanish: {{t-|es|fábrica|f}}
 * Turkish: {{t+|tr|bina}}, {{t+|tr|yapı}}
 {{trans-bottom}}
 
