--- a/en/l/lippage.741845.wikitext
+++ b/en/l/lippage.741845.wikitext
@@ -1,6 +1,1 @@
-==English==
-
-===Noun===
-{{en-noun|-}}
-
-# An [[uneven]] [[surface]] of a [[floor]] that occurs when [[stone]] or [[tile]]s are not laid to a uniform [[level]]
+Does not exist in ANY dictionary anywhere.  NON-existant!! '''FOREVER'''!!!
