tgloss:"that has been packaged prior to being sold" ([[WT:EDIT|Assisted]]) <prepackaged#7931481>

--- a/en/p/prepackaged.719989.wikitext
+++ b/en/p/prepackaged.719989.wikitext
@@ -17,7 +17,7 @@
 # That has been [[packaged]] prior to being sold
 
 ====Translations====
-{{trans-top}}
+{{trans-top|that has been packaged prior to being sold}}
 * Italian: {{t-|it|preconfezionato}}
 {{trans-mid}}
 {{trans-bottom}}
