iwiki +[[:ml:pledge]] <pledge#7931729>

--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -108,6 +108,7 @@ From {{etyl|enm}} ''[[plege#Middle English|plege]]'' from {{etyl|xno}} ''[[plege
 [[io:pledge]]
 [[it:pledge]]
 [[hu:pledge]]
+[[ml:pledge]]
 [[no:pledge]]
 [[pt:pledge]]
 [[ru:pledge]]
