t+bg:[[крадец]] t+bg:[[гега]] t+bg:[[извивка]] t+bg:[[извивам]] ([[WT:EDIT|Assisted]]) <crook#7933174>

--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -22,6 +22,7 @@
 
 ====Translations====
 {{trans-top|a criminal who steals}}
+* Bulgarian: {{t|bg|крадец|m|sc=Cyrl}}
 * Finnish: {{t+|fi|rikollinen}}, {{t+|fi|konna}}
 * French: {{t+|fr|escroc|m}}
 * German: {{t+|de|Gauner|m}}, {{t+|de|Ganove|m}}
@@ -32,6 +33,7 @@
 {{trans-bottom}}
 
 {{trans-top|a staff with a hook at one end, particularly one used by shepherds}}
+* Bulgarian: {{t|bg|гега|f|sc=Cyrl}}
 * Finnish: [[käyräsauva]]
 * German: [[Hirtenstab]] {{m}}, [[Krummstab]] {{m}}
 {{trans-mid}}
@@ -39,6 +41,7 @@
 {{trans-bottom}}
 
 {{trans-top|a bend}}
+* Bulgarian: {{t|bg|извивка|f|sc=Cyrl}}
 * Finnish: {{t-|fi|taive}}
 {{trans-mid}}
 {{trans-bottom}}
@@ -58,6 +61,7 @@
 
 ====Translations====
 {{trans-top|to bend}}
+* Bulgarian: {{t|bg|извивам|sc=Cyrl}}
 * Finnish: {{t-|fi|koukistaa}}
 {{trans-mid}}
 * German: [[krümmen]]
