/* Verb */ bounden is only the participle and cannot be the simple past <bind#7935436>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -15,7 +15,7 @@ From {{etyl|ang}} ''[[bindan]]''.
 # A [[troublesome]] situation; a [[problem]]; a [[predicament]] or [[quandary]].
 
 ===Verb===
-{{en-verb|binds|binding|'''[[bound]]''' or rarely '''[[bounden]]'''}}
+{{en-verb|binds|binding|bound|'''[[bound]]''' ''or rarely'' '''[[bounden]]'''}}
 
 # To [[connect]]
 # To [[couple]]
