--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -1,6 +1,6 @@
+==English==
 {{wikipedia}}
 [[Image:Bamboo DSCN2465.jpg|thumb|right|Bamboo.]]
-==English==
 
 ===Etymology===
 From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|lang=pt}}, from {{etyl|ms|en}} {{term|samambu|lang=ms}}, from {{etyl|kn|en}} {{term|bambu|lang=kn}}.
@@ -11,8 +11,8 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 ===Noun===
 {{en-noun}}
 
-# <!--DefA--> A [[plant]]; a [[grass]] of the [[Poaceae]] family, characterised by its woody, hollow, round, straight, jointed stem.
-# <!--DefB--> The wood of the bamboo plant as a material or [[cane]].
+# A [[plant]]; a [[grass]] of the [[Poaceae]] family, characterised by its woody, hollow, round, straight, jointed stem.
+# The wood of the bamboo plant as a material or [[cane]].
 # a [[didgeridoo]]
 # {{slang}} A [[British]] [[military]] or Honourable East India Company [[employee]], who spent so much time in Indonesia, India, or Malaysia that they never went back home.
 
@@ -87,7 +87,7 @@ The translations below need to be checked by native speakers and inserted into t
 ===Adjective===
 {{en-adj|-}}
 
-# <!--DefC-->Made of the wood of the bamboo.
+# Made of the wood of the bamboo.
 
 ====Translations====
 {{trans-top|made of bamboo}}
@@ -110,9 +110,6 @@ The translations below need to be checked by native speakers and inserted into t
 ===Anagrams===
 * {{alphagram|abbmoo}}
 * [[boabom#English|boabom]]
-
-
-[[Category:Malay derivations]]
 
 ----
 
