--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -1,6 +1,5 @@
-{{wikipedia}}
 ==English==
-
+{{wikipedia}}
 ===Pronunciation===
 * {{IPA|/ˌmʌltəplɪˈkeɪʃən/}}, {{SAMPA|/%mVlt@plI"keIS@n/}}
 *: {{rhymes|eɪʃǝn}}
@@ -8,13 +7,13 @@
 ===Noun===
 {{en-noun|s|-}}
 
-# <!--Def1-->{{context|uncountable|arithmetic|mathematics}} The process of computing the sum of a number with itself a specified number of times, or any other [[analogous]] [[binary operation]] that combines other [[mathematical object]]s.<!--
+# {{context|uncountable|arithmetic|mathematics}} The process of computing the sum of a number with itself a specified number of times, or any other [[analogous]] [[binary operation]] that combines other [[mathematical object]]s.<!--
 When applied to whole numbers, multiplication can be considered as repeated addition.  The multiplication  ''x &times; y''  is the same as  ''x + x + ... + x'',  where the  ''x''  appears  ''y'' times in the addition, or  ''y + y + ... + y'',  where the  ''y''  appears  ''x''  times in the addition.-->
-# <!--Def2-->{{context|countable|arithmetic}} A calculation involving multiplication.
+# {{context|countable|arithmetic}} A calculation involving multiplication.
 #: ''The teacher set us ten multiplications as homework.''
 
 ====Translations====
-{{trans-top|process}}<!--Def1-->
+{{trans-top|process}}
 * Chinese: [[乘法]] (chéng fǎ)
 * Chinese Characters: [[乘]] / [[乗]]
 * Czech: {{t-|cs|násobení|n}}
