--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -77,8 +77,8 @@
 * Indonesian: {{t-|id|lagi|xs=Indonesian}}
 * Irish: {{t+|ga|arís|xs=Irish}}
 * Italian: {{t+|it|di nuovo}}, {{t+|it|ancora}}
-* Japanese: {{t+|ja|又}}, {{t-|ja|また|tr=mata}},  {{t-|ja|再び|tr=ふたたび, futatabi}},  {{t|ja|もう一度|tr=mō ichido}},  {{t|ja|あらためて|tr=aratamete}}
 {{trans-mid}}
+* Japanese: {{t+|ja|又}}, {{t-|ja|また|tr=mata}},  {{t-|ja|再び|tr=ふたたび, futatabi}},  {{t|ja|もう一度|tr=mō ichido}},  {{t|ja|あらためて|tr=aratamete}}
 * {{trreq|Kannada}}
 * [[Khmer]]: {{Khmr|[[ទៀត]]}} (dtīət), {{Khmr|[[ម្ដងទៀត]]}} (mdorng dtīət)
 * Korean: [[다시]] (dasi)
@@ -90,7 +90,7 @@
 * [[Malayalam]]: {{t|ml|വീണ്ടും|sc=Mlym|xs=Malayalam}}
 * Maltese: [[darb' oħra]]
 * Maori: {{t-|mi|anō|xs=Maori}}
-* {{trreq|Mongolian}}
+* Mongolian: {{t|mn|дахин|tr=dahin|sc=Cyrl}}
 * [[Nahuatl]]: {{t-|nah|occeppa|xs=Nahuatl}}
 * Navajo: {{tø|nv|nááná}}
 * Norwegian: {{t+|no|igjen}}
