--- a/en/s/stiff upper lip.803114.wikitext
+++ b/en/s/stiff upper lip.803114.wikitext
@@ -15,4 +15,5 @@ American in origin; earliest known use in 1815 [http://books.google.com/books?id
 #*'''2005''', Ben Wright with Michael Patrick Shiels, ''Good Bounces and Bad Lies'', page 39
 #*:In typical British '''stiff upper lip''' fashion, the tournament organizers expected us to play into, and through, the menacing weather.
 
+[[fr:stiff upper lip]]
 [[pt:stiff upper lip]]
