t+mn:[[хагарах]] t-balance ([[WT:EDIT|Assisted]]) <break#7940898>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -138,14 +138,14 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Icelandic: {{t|is|brotna}}
 * [[Ido]]: {{t+|io|ruptar|xs=Ido}}
 * Irish: {{t-|ga|bris|xs=Irish}}
-{{trans-mid}}
 * Italian: {{t+|it|rompere}}
+{{trans-mid}}
 * Japanese: [[割れる]] (wareru), [[散らばる]] (chirabaru)
 * Korean: [[부러지다]] (bureojida)
 * Latin: {{t-|la|confringo|alt=cōnfringō}}, {{t-|la|frango|alt=frangō}}, {{t-|la|rumpo|alt=rumpō}}
 * Latvian: {{t-|lv|salūzt|xs=Latvian}}, {{t-|lv|lūzt|xs=Latvian}}
 * Lithuanian: [[sulaužyti]]
-* {{trreq|Mongolian}}
+* Mongolian: {{t|mn|хагарах|tr=hagarah|sc=Cyrl}}
 * {{trreq|Old English}}
 * {{trreq|Persian}}
 * Polish: [[złamać się]] (two pieces), [[rozbić się]], [[połamać się]] (more pieces)
