/* Pronunciation */ hphones tmplt <weight#7951652>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -8,9 +8,7 @@
 * {{IPA|/weɪt/}}
 * {{audio|en-us-weight.ogg|Audio (US)}}
 * {{rhymes|eɪt}}
-
-====Homophones====
-* [[wait]]
+* {{homophones|wait}}
 
 ===Noun===
 {{wikipedia|weight}}
