--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -71,6 +71,7 @@
 * Polish: {{t|pl|gwizd|m}}
 * Portuguese: {{t|pt|apito|m}}, {{t|pt|assobio|m}}
 * Russian: {{t|ru|свист|m|tr=svist}}
+* [[Scottish Gaelic]]: {{t|gd|fead|f}}
 * Spanish: {{t+|es|silbato|m}},  {{t|es|pitido|m}},  {{t|es|chiflido|m}},  {{t|es|pitada|f}}
 * Swahili: {{t+|sw|kipenga|xs=Swahili}}
 * Swedish: {{t|sv|vissling|c}}
@@ -88,6 +89,7 @@
 * Polish: [[gwizd]] {{m}}
 * Portuguese: [[apito]] {{m}}, [[assobio]] {{m}}
 * Russian: {{t|ru|свист|m|tr=svist}}
+* [[Scottish Gaelic]]: {{t|gd|fead|f}}
 * Spanish: {{t+|es|silbato|m}},  {{t+|es|pito|m}},  {{t|es|pitido}}
 * Swahili: {{t+|sw|kipenga|xs=Swahili}}
 {{trans-bottom}}
@@ -138,6 +140,7 @@
 * Irish: [[lig fead]]
 * Portuguese: {{t|pt|assoviar}}
 * Russian: {{t|ru|свистеть|tr=svist'ét’}} {{impf}}, {{t|ru|свистнуть|tr=svístnut’}} {{pf}}
+* [[Scottish Gaelic]]: {{t|gd|dèan fead}},  {{t|gd|fead}}
 * Serbian: {{t|sr|zvižduk|m}}
 * Spanish: {{t+|es|silbar}},  {{t+|es|chiflar}},  {{t+|es|pitar}}
 * Swahili: {{t+|sw|kipenga|xs=Swahili}}
