/* Pronunciation */ hphones <seize#7952884>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -3,10 +3,7 @@
 ===Pronunciation===
 * {{enPR|sēz}}, {{IPA|/siːz/}}, {{SAMPA|/si:z/}}
 * {{audio|en-us-seize.ogg|Audio (US)}}
-
-====Homophones====
-* [[seas]]
-* [[sees]]
+* {{homophones|seas|sees}}
 
 ===Verb===
 {{en-verb|seiz|ing}}
