t+nv:[[naaldloshii]] ([[WT:EDIT|Assisted]]) <quadruped#7989738>

--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -13,6 +13,7 @@
 * French: {{t+|fr|quadrupède|m}}
 {{trans-mid}}
 * Icelandic: [[ferfætlingur]] {{m}}
+* Navajo: {{tø|nv|naaldloshii}}
 * Spanish: [[cuadrupedo]] {{m}}
 {{trans-bottom}}
 
