/* Translations */ standardised chi trans <leather#7992216>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -26,7 +26,8 @@ Old English ''[[leþer]]''
 * Bosnian: {{t-|bs|koža|f}}
 * [[Catalan]]: [[cuir]] {{m}}
 * [[Chamicuro]]: {{tø|ccc|shama}}
-* Chinese: [[皮革]] (pí gé)
+* Chinese:
+*: Mandarin: {{t|zh|皮革|tr=pí gé|sc=Hani}}
 * Croatian: {{t-|hr|koža|f}}
 * Czech: {{t-|cs|kůže|f}}
 * Danish: {{t-|da|læder|n}}
