iwiki +[[:ml:quack]] <quack#7994066>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -147,6 +147,7 @@ shortening of  [[Quack-salver]] ([[Quack-saluer]]), from {{etyl|dum}} [[kwaksalv
 [[io:quack]]
 [[id:quack]]
 [[hu:quack]]
+[[ml:quack]]
 [[ro:quack]]
 [[ru:quack]]
 [[simple:quack]]
