iwiki +[[:nl:consume]] <consume#7994748>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -128,6 +128,7 @@ From {{etyl|la}} ''[[consumere]]''.
 [[lo:consume]]
 [[hu:consume]]
 [[ml:consume]]
+[[nl:consume]]
 [[ja:consume]]
 [[pt:consume]]
 [[simple:consume]]
