t+cs:[[bambus]] ([[WT:EDIT|Assisted]]) <bamboo#8003138>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -26,6 +26,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Bengali: {{tø|bn|বাঁশ|tr=bāṁś|sc=Beng}}
 * Bulgarian: {{t-|bg|бамбук}}
 * Chinese traditional/simplified: [[竹材]],[[竹材]] (zhú cái)
+* Czech: {{t|cs|bambus|m}}
 * Dutch: {{t+|nl|bamboe|n}}
 * Esperanto: {{t-|eo|bambuo|xs=Esperanto}}
 * Finnish: {{t-|fi|bambu}}
