--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -72,6 +72,7 @@ From {{etyl|la|fr}} {{term|quadrans|quadrāns|fourth part of something, quarter|
 [[io:quadrant]]
 [[id:quadrant]]
 [[it:quadrant]]
+[[ml:quadrant]]
 [[ru:quadrant]]
 [[fi:quadrant]]
 [[ta:quadrant]]
