iwiki +[[:kn:ready-made]] <ready-made#8006874>

--- a/en/r/ready-made.741519.wikitext
+++ b/en/r/ready-made.741519.wikitext
@@ -8,5 +8,6 @@
 # An [[everyday]] [[object]] [[designated]] as [[art]].
 
 [[fr:ready-made]]
+[[kn:ready-made]]
 [[vi:ready-made]]
 [[zh:ready-made]]
