--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -339,6 +339,7 @@ From English ''[[pig#English|pig]]''.
 [[Category:Torres Strait Creole nouns]]
 [[Category:tcs:Mammals]]
 
+[[af:pig]]
 [[ang:pig]]
 [[ar:pig]]
 [[zh-min-nan:pig]]
