--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -77,6 +77,7 @@ See [[bind]]
 
 =====Translations=====
 {{trans-top|boundary, border of territory}}
+* Armenian: {{t|hy|սահման|tr=sahman|sc=Armn}}
 * Bulgarian: {{t+|bg|граница}},  {{t+|bg|предел|m}}
 * [[Catalan]]: {{t|ca|límit|m}}
 * Dutch: {{t+|nl|grens}}, {{t+|nl|limiet}}
