/* Adverb */ ====Translations==== <even so#8023168>

--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -6,6 +6,7 @@
 # [[despite|Despite]] the contrary.
 #: ''His ideas are all wrong. '''Even so''', I want to agree with him.''
 
+====Translations====
 {{trans-top|despite the contrary}}
 * Spanish: {{t-|es|aun así}}
 {{trans-mid}}
