iwiki +[[:kn:simple]] <simple#8028306>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -288,6 +288,7 @@ From {{etyl|la|ca}} {{term|lang=la|simplex}}.
 [[ko:simple]]
 [[io:simple]]
 [[it:simple]]
+[[kn:simple]]
 [[kk:simple]]
 [[sw:simple]]
 [[ku:simple]]
