--- a/en/h/hard-hearted.774564.wikitext
+++ b/en/h/hard-hearted.774564.wikitext
@@ -6,6 +6,7 @@
 # {{alternative spelling of|hardhearted}}
 
 [[fa:hard-hearted]]
+[[kn:hard-hearted]]
 [[ml:hard-hearted]]
 [[ta:hard-hearted]]
 [[vi:hard-hearted]]
