/* Noun */ A [[lucky break]] <break#8049025>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -464,6 +464,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 #: ''The sun came out in a '''break''' in the clouds.''
 # A [[rest]] or [[pause]], usually from [[work]]; a [[breaktime]].
 #: ''Let’s take a five-minute '''break'''.''
+# {{context|by ellipsis}} A [[lucky break]].
 # {{tennis}} A [[game]] won by the [[receive|receiving]] [[player]] or players (when playing [[doubles]]).
 # {{billiards|snooker|pool}} The first [[shot]] in a game of [[billiards]]
 # {{snooker}} The number of points scored by one player in one visit to the table
