--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -193,6 +193,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Dutch: {{t+|nl|breken}}
 * Finnish: {{t-|fi|murtaa}}, {{t+|fi|katkaista}}, {{t+|fi|taittaa}}
 * French: {{t+|fr|casser}}
+* [[Galician]]: {{t|gl|crebar}}, {{t|gl|quebrar}}
 * German: {{t+|de|brechen}}
 * Hebrew: {{t-|he|שבר|tr=shavár}}
 * Hungarian: {{t+|hu|eltör}}
@@ -305,6 +306,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Esperanto: {{t-|eo|rompi|xs=Esperanto}}
 * Finnish: {{t-|fi|murtaa}}, {{t+|fi|rikkoa}}, {{t+|fi|särkeä}}, {{t+|fi|taittaa}}, {{t+|fi|hajottaa}}, {{t-|fi|pirstoa}}
 * French: {{t+|fr|rompre}}, {{t+|fr|casser}}, {{t+|fr|briser}}
+* [[Galician]]: {{t|gl|crebar}}, {{t|gl|quebrar}}
 * Georgian: [[ტყდომა]] (tq‘doma), [[მსხვრევა]] (msxvreva)
 * German: {{t+|de|brechen}}, {{t+|de|zerbrechen}}
 * [[Guaraní]]: [[joka]]
