--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -1,6 +1,9 @@
 ==Hebrew==
 {{wikipedia|lang=he}}
 
+===Pronunciation===
+* {{Audio|He-Medinat_Israel.ogg|Audio}}
+
 ===Proper noun===
 {{infl|he|proper noun|sc=Hebr|head=יִשְׂרָאֵל|g=m|tr=Yisra'el}}
 
