--- a/en/a/all bark and no bite.742638.wikitext
+++ b/en/a/all bark and no bite.742638.wikitext
@@ -9,4 +9,7 @@
 # {{idiom}} Full of big [[talk]] but lacking [[action]], [[power]], or [[substance]]; [[pretentious]].
 # {{idiom}} Describes someone who often says [[cutting]] [[remarks]], but actually has a [[soft]] [[personality]] underneath.
 
+====Translations====
+French : [[grande gueule]]
+
 [[Category:English adjectives]]
