--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -15,15 +15,15 @@
 ===Adverb===
 {{en-adv|-}}
 
-# at that [[time]]
+# {{context|temporal location}} at that [[time]]
 #: ''He was happy '''then'''.''
-# soon afterward.
+# {{context|temporal location}} soon afterward.
 #: ''He fixed it, '''then''' left.''
-# next in order; in addition.
+# {{context|sequence}} next in order; in addition.
 #: ''There are three green ones, '''then''' a blue one.''
-# in that case.
+# {{context|conjunctive}} in that case.
 #: ''If it’s locked, '''then''' we’ll need the key.''
-# at the same time; on the other hand.
+# {{context|sequence}} at the same time; on the other hand.
 #: ''That’s a nice shirt, but '''then''', so is the other one.''
 # {{obsolete}} At the time that; [[when]].
 #* '''1485''', Sir Thomas Malory, ''Le Morte Darthur'', Book I.23:
