/* Anagrams */ cats advs <then#8076130>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -219,6 +219,8 @@
 
 [[Category:100 English basic words]]
 [[Category:English temporal location adverbs]]
+[[Category:English sequence adverbs]]
+[[Category:English conjunctive adverbs]]
 [[Category:Time]]
 
 [[ar:then]]
