/* Translations */ moved translations of the full term to "compact disc" <CD#8081083>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -35,19 +35,19 @@
 # [[circular dichroism]]
 
 ====Translations====
-{{trans-top|compact-disk}}
-* Arabic: {{t|ar|سي دي|m|tr=sii dii}},  {{t-|ar|CD|m|tr=sii dii}}
+{{trans-top|abbreviations of compact-disc actually in use, for full term see [[compact disc]]}}
+* Arabic: {{t-|ar|CD|m|tr=sii dii}}
 * Chinese:
-*: Mandarin: {{t-|cmn|光盤|sc=Hani}},  {{t-|cmn|光盘|tr=guāngpán|sc=Hani}},  {{t-|cmn|光碟|tr=guāngdié|sc=Hani}}, {{t-|cmn|CD|tr=sìdì|sc=Hani}}
+*: Mandarin: {{t-|cmn|CD|tr=sìdì|sc=Hani}}
 * Dutch: {{t+|nl|cd|m}} (lower case)
-* French: {{t|fr|disque compact|m}},  {{t+|fr|CD|m}}
-* German: {{t+|de|CD|f}},  {{t|de|Kompaktplatte|f}}
+* Finnish: {{t|fi|CD}}
+* French: {{t+|fr|CD|m}}
+* German: {{t+|de|CD|f}}
 {{trans-mid}}
-* Greek: {{t|el|συμπαγής δίσκος|m|tr=simpagís dískos}},  {{t|el|σιντί|n|tr=sidí}}
-* Japanese: {{t|ja|シーディー|tr=sīdī}},  {{t+|ja|CD|tr=sīdī}},  {{t-|ja|コンパクトディスク|tr=konpakutodisuku}},  {{t-|ja|ＣＤ|tr=sīdī}}
-* [[Macedonian]]: {{t-|mk|компакт-диск|m|tr=kómpakt-disk}},  {{t|mk|це-де|n|tr=ce-de}}
-* Russian: {{t+|ru|компакт-диск|m|tr=kompákt-disk}},  {{qualifier|indeclinable}} {{t+|ru|CD|m|tr=si-di}},  {{qualifier|indeclinable}} {{t|ru|си-ди|m|tr=si-di}}
-* [[Scottish Gaelic]]: {{t|gd|meanbh-chlàr|m}}
+* Greek: {{t|el|σιντί|n|tr=sidí}}
+* Japanese: {{t|ja|シーディー|tr=sīdī}},  {{t+|ja|CD|tr=sīdī}},  {{t-|ja|ＣＤ|tr=sīdī}}
+* [[Macedonian]]: {{t|mk|це-де|n|tr=ce-de}}
+* Russian: {{qualifier|indeclinable}} {{t+|ru|CD|m|tr=si-di}},  {{qualifier|indeclinable}} {{t|ru|си-ди|m|tr=si-di}}
 {{trans-bottom}}
 
 ==={{abbreviation}}===
