t+nv:[[ndi]] ([[WT:EDIT|Assisted]]) <though#8090211>

--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -41,6 +41,7 @@
 * Japanese: {{t|ja|にもかかわらず|tr=nimokakawarazu}}, {{t-|ja|それでも|tr=soredemo}}
 * [[Luo]]: [[kata kamano]]
 {{trans-mid}}
+* Navajo: {{tø|nv|ndi}}
 * Norwegian: {{t+|no|dog}}
 * Portuguese: no [[entanto]], [[não obstante]]
 * Russian: {{t+|ru|тем не менее}}, {{t+|ru|однако}}, {{t+|ru|всё-таки}}
