--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -78,9 +78,10 @@
 * Greek: {{t|el|έστω και αν|tr=ésto ké án}}, {{t|el|αν και|tr=án ké}}, {{t|el|μολονότι|tr=mólonóti}}, {{t|el|καίτοι|tr=kéti}}
 * Icelandic: {{t+|is|þó}}, {{t|is|þótt}}
 * Indonesian: {{t-|id|walau|xs=Indonesian}}, {{t|id|meski|xs=Indonesian}}
-{{trans-mid}}
 * Italian: [[anche]] [[se]]
+{{trans-mid}}
 * Japanese: {{t-|ja|だが|tr=daga}}, {{t|ja|だけれども|tr=dakeredomo}}, {{t|ja|だけど|tr=dakeredo}}{{qualifier|colloquial}}
+* Navajo: {{tø|nv|ndi}}
 * Polish: {{t|pl|choć}}, {{t+|pl|chociaż}}
 * Portuguese: {{t|pt|apesar}} de
 * Romanian: {{t-|ro|desi}}, de {{t+|ro|parca}}
