t+fi:[[kesäinen]] ([[WT:EDIT|Assisted]]) <summerlike#8092575>

--- a/en/s/summerlike.801705.wikitext
+++ b/en/s/summerlike.801705.wikitext
@@ -21,6 +21,7 @@
 
 ====Translations====
 {{trans-top|of a day or the weather, resembling or characteristic of summer.}}
+* Finnish: {{t|fi|kesäinen}}
 * German: {{t-|de|sommerlich}}
 {{trans-mid}}
 * Norwegian: {{t|nl|sommerlig}}
