--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -16,14 +16,15 @@
 {{trans-top|polygon having four sides}}
 * Czech: {{t-|cs|čtyřúhelník|m}}
 * Dutch: {{t+|nl|vierhoek}}
+* Esperanto: {{t|eo|kvarlatero}}
 * Finnish: {{t+|fi|nelikulmio}}
 * French: {{t+|fr|quadrilatère}}
 * German: {{t+|de|Viereck}}
 * Greek: {{t+|el|τετράπλευρο|n|sc=Grek}}
 * Hebrew: {{he-translation|מרובע|merubá}} {{m}}
 * Hindi: [[चतुर्भुज]]
-* Icelandic: {{t|is|ferhyrningur|m}}
 {{trans-mid}}
+* Icelandic: {{t|is|ferhyrningur|m}}
 * Italian: {{t+|it|quadrilatero|m}}
 * Japanese: {{t-|ja|四辺形|tr=shihenkei|sc=Jpan}}, (in common, uses {{t-|ja|四角形|tr=shikakukei|sc=Jpan}})
 * Polish: [[czworokąt]] {{m}}, [[czworobok]] {{m}}
