--- a/en/1/1 Kings.801703.wikitext
+++ b/en/1/1 Kings.801703.wikitext
@@ -6,9 +6,9 @@
 # {{biblical}}  A book of the [[Old Testament]] of [[Bible]], and of the [[Tanakh]]; in some Bibles known as [[1 Samuel]] or [[3 Kings]].
 
 ====Related terms====
-*[[Kgs.]]
-*[[1 Kgs.]]
-*[[3 Kgs.]]
+*[[Kgs]]
+*[[1 Kgs]]
+*[[3 Kgs]]
 
 ====Translations====
 {{trans-top|book of the Bible}}
