--- a/en/2/2 Kings.801706.wikitext
+++ b/en/2/2 Kings.801706.wikitext
@@ -6,9 +6,9 @@
 # {{biblical}}  A book of the [[Old Testament]] of [[Bible]], and of the [[Tanakh]]; in some Bibles known as [[2 Samuel]] or [[4 Kings]].
 
 ====Related terms====
-*[[Kgs.]]
-*[[2 Kgs.]]
-*[[4 Kgs.]]
+*[[Kgs]]
+*[[2 Kgs]]
+*[[4 Kgs]]
 
 ====Translations====
 {{trans-top|book of the Bible}}
