--- a/en/2/2 Samuel.801688.wikitext
+++ b/en/2/2 Samuel.801688.wikitext
@@ -6,8 +6,8 @@
 # {{biblical}}  A book of the [[Old Testament]] of [[Bible]], and of the [[Tanakh]]; in some Bibles known as [[2 Kings]].
 
 ====Related terms====
-*[[Kgs.]]
-*[[2 Kgs.]]
+*[[Kgs]]
+*[[2 Kgs]]
 *[[2 Sam.]]
 
 ====Translations====
