--- a/en/1/1 Samuel.801687.wikitext
+++ b/en/1/1 Samuel.801687.wikitext
@@ -6,8 +6,8 @@
 # {{biblical}}  A book of the [[Old Testament]] of [[Bible]], and of the [[Tanakh]]; in some Bibles known as [[1 Kings]].
 
 ====Related terms====
-*[[Kgs.]]
-*[[1 Kgs.]]
+*[[Kgs]]
+*[[1 Kgs]]
 *[[1 Sam.]]
 
 ====Translations====
