--- a/en/1/1 Kgs.801721.wikitext
+++ b/en/1/1 Kgs.801721.wikitext
@@ -4,8 +4,8 @@
 # {{biblical}} An abbreviation used for [[1 Kings]], an [[Old Testament]] book of the Bible.
 
 ====Related terms====
-*[[2 Kgs.]]
-*[[3 Kgs.]]
-*[[4 Kgs.]]
+*[[2 Kgs]]
+*[[3 Kgs]]
+*[[4 Kgs]]
 
 [[Category:Books of the Bible]]
