--- a/en/3/3 Kgs.801722.wikitext
+++ b/en/3/3 Kgs.801722.wikitext
@@ -4,8 +4,8 @@
 # {{biblical}} An abbreviation used for [[3 Kings]], an [[Old Testament]] book of the Bible.
 
 ====Related terms====
-*[[1 Kgs.]]
-*[[2 Kgs.]]
-*[[4 Kgs.]]
+*[[1 Kgs]]
+*[[2 Kgs]]
+*[[4 Kgs]]
 
 [[Category:Books of the Bible]]
