--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -3,22 +3,12 @@
 {{wikipedia}}
 
 ===Pronunciation===
-* {{audio|En-us-marten.ogg|Audio (US)}}
-{| border=1 cellpadding=5
-! !! [[w:IPA|IPA]] !! [[w:SAMPA|SAMPA]] !! Dictionary
-|-
-!
-| {{IPAchar|/ˈmɑː(r)t(ə)n/}} || <tt>/"mA:(r)t(@)n/</tt> || mä(r)'t(ə)n
-|-
-! [[GenAm]]
-| {{IPAchar|/ˈmɑrtən/}} || <tt>/"mArt@n/</tt>
-|}
-
+* {{a|UK}} {{IPA|/ˈmɑː(ɹ).tɪn/|/ˈmɑː(ɹ).tən/}}
+* {{a|US}} {{IPA|/ˈmɑtən/}}, {{SAMPA|/"mAr\t@n/}}
+** {{audio|En-us-marten.ogg|Audio (US)}}
 * {{hyphenation|mar|ten}}
-* {{rhymes|ɑː(r)t(ə)n}}
-
-====Homophones====
-* [[martin]], [[Martin]]
+* {{rhymes|ɑː(ɹ)tɪn}}
+* {{homophones|martin|Martin}} {{qualifer|in some accents}}
 
 ===Noun===
 {{en-noun}}
