--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -37,14 +37,19 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 #: ''There she '''blows'''! (i.e. "I see a whale spouting!")''
 # {{transitive}} To propel by an [[air]] [[current]].<!--accomplishment/activity-->
 #: '''''Blow''' the dust off that book and open it up.''
-# {{transitive}} To recklessly [[squander]].<!--accomplishment/activity-->
+# {{transitive|slang}} To recklessly [[squander]].<!--accomplishment/activity-->
 #: ''I managed to '''blow''' $1000 at blackjack in under an hour.''
+#: ''I '''blew''' $35 thou on a car.''
+#: ''We '''blew''' an opportunity to get benign corporate sponsorship.''
 # {{transitive|vulgar}} To [[fellate]].<!--accomplishment/activity-->
 #: ''Who did you have to '''blow''' to get those backstage passes?''
 # {{transitive}} To create or shape by blowing; as in ''to blow bubbles'', ''to blow glass''.<!--accomplishment/activity-->
-# {{transitive}} To play a musical instrument, such as a horn or woodwind.<!--activity-->
+# {{transitive}} To cause to make sound by blowing, as a musical instrument.<!--activity-->
+# {{rfd-redundant}} {{transitive}} To play a musical instrument, such as a horn or woodwind.<!--activity-->
 #* '''1996''', [[w:Ike Turner|Ike Turner]], interviewed by Terri Gross on "Fresh Air", ''National Public Radio'' (US):
 #*: "He was '''blow'''ing saxophone for me."
+# ((intransitive)) To make a sound as the result of being blown.
+#: ''In the harbor, the ships' horns '''blew'''.''
 # {{transitive}} To [[leave]].<!--accomplishment/achievement-->
 #: ''Let's '''blow''' this joint.''
 # {{transitive|with "up"|or|with prep phrase headed by "to"}} To cause to explode, shatter, or be utterly destroyed.<!--achievement-->
