--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -48,7 +48,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 # {{rfd-redundant}} {{transitive}} To play a musical instrument, such as a horn or woodwind.<!--activity-->
 #* '''1996''', [[w:Ike Turner|Ike Turner]], interviewed by Terri Gross on "Fresh Air", ''National Public Radio'' (US):
 #*: "He was '''blow'''ing saxophone for me."
-# ((intransitive)) To make a sound as the result of being blown.
+# {{intransitive}} To make a sound as the result of being blown.
 #: ''In the harbor, the ships' horns '''blew'''.''
 # {{transitive}} To [[leave]].<!--accomplishment/achievement-->
 #: ''Let's '''blow''' this joint.''
