/* Etymology 2 */ sp <blow#8121353>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -259,7 +259,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * [[bowl]]
 
 ===Etymology 2===
-{{etyl|enm|en}} {{term|blowe|lang=enm}}, {{term|blaw|lang-enm}}. (Akin to Old High German {{term|bliuwan||lang=goh|to beat", "strike}} (Gernam {{term|bläuen|lang=deu}}, Gothic {{term|bliggwan}}))
+{{etyl|enm|en}} {{term|blowe|lang=enm}}, {{term|blaw|lang=enm}}. (Akin to Old High German {{term|bliuwan||lang=goh|to beat", "strike}} (Gernam {{term|bläuen|lang=deu}}, Gothic {{term|bliggwan}}))
 
 ====Noun====
 {{en-noun}}
