--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -264,6 +264,23 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 #: ''The players were able to get a '''blow''' during the last timeout.''
 # {{uncountable|slang}} [[cocaine|Cocaine]].<!--3-->
 
+{{trans-see|cocaine}}
+{{trans-top|strong wind}}
+* Finnish: [[puhuri]], [[kova]] [[tuuli]]
+* German: {{t+|de|Böe|f}}
+{{trans-mid}}
+* [[Macedonian]]: {{t|mk|виор|m|tr=víor}}
+* Swahili: {{t+|sw|panchi|xs=Swahili}}
+{{trans-bottom}}
+
+{{trans-top|chance to catch one’s breath}}
+* Finnish: [[hengähdystauko]], [[henki|henkeä]]
+* [[Macedonian]]: {{t|mk|здив|m|tr=zdiv}}
+{{trans-mid}}
+* Russian: [[передышка]] (p'er'edýška) {{f}}
+* Swahili: {{t+|sw|panchi|xs=Swahili}}
+{{trans-bottom}}
+
 ===Etymology 2===
 {{etyl|enm|en}} {{term|blowe|lang=enm}}, {{term|blaw|lang=enm}}. (Akin to Old High German {{term|bliuwan||lang=goh|to beat", "strike}} (Gernam {{term|bläuen|lang=deu}}, Gothic {{term|bliggwan}}))
 
@@ -315,23 +332,6 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * [[Telugu]]: [[దెబ్బ]] (2)
 {{trans-bottom}}
 
-{{trans-see|cocaine}}
-{{trans-top|strong wind}}
-* Finnish: [[puhuri]], [[kova]] [[tuuli]]
-* German: {{t+|de|Böe|f}}
-{{trans-mid}}
-* [[Macedonian]]: {{t|mk|виор|m|tr=víor}}
-* Swahili: {{t+|sw|panchi|xs=Swahili}}
-{{trans-bottom}}
-
-{{trans-top|chance to catch one’s breath}}
-* Finnish: [[hengähdystauko]], [[henki|henkeä]]
-* [[Macedonian]]: {{t|mk|здив|m|tr=zdiv}}
-{{trans-mid}}
-* Russian: [[передышка]] (p'er'edýška) {{f}}
-* Swahili: {{t+|sw|panchi|xs=Swahili}}
-{{trans-bottom}}
-
 ===Etymology 3===
 {{etyl|enm|en}} {{term|blowen|lang=enm}} from {{etyl|ang|en}} {{term|blowan|blōwan|lang=ang}}
 
@@ -352,7 +352,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 # A bloom, state of [[flowering]].
 #: ''roses in full '''blow'''.''
 
-====Related terms====
+=====Related terms=====
 * [[ablow]]
 
 [[Category:1000 English basic words]]
