--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -256,7 +256,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-bottom}}
 
 ====Noun====
-{{en-noun}]
+{{en-noun}}
 
 # A strong [[wind]].<!--4-->
 #: ''We're having a bit of a '''blow''' this afternoon.''
@@ -264,7 +264,6 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 #: ''The players were able to get a '''blow''' during the last timeout.''
 # {{uncountable|slang}} [[cocaine|Cocaine]].<!--3-->
 
-{{trans-see|cocaine}}
 {{trans-top|strong wind}}
 * Finnish: [[puhuri]], [[kova]] [[tuuli]]
 * German: {{t+|de|Böe|f}}
@@ -280,6 +279,8 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * Russian: [[передышка]] (p'er'edýška) {{f}}
 * Swahili: {{t+|sw|panchi|xs=Swahili}}
 {{trans-bottom}}
+
+{{trans-see|cocaine}}
 
 ===Etymology 2===
 {{etyl|enm|en}} {{term|blowe|lang=enm}}, {{term|blaw|lang=enm}}. (Akin to Old High German {{term|bliuwan||lang=goh|to beat", "strike}} (Gernam {{term|bläuen|lang=deu}}, Gothic {{term|bliggwan}}))
