/* Noun */ uk tag, trans hdr <blow#8121373>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -260,10 +260,11 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 
 # A strong [[wind]].<!--4-->
 #: ''We're having a bit of a '''blow''' this afternoon.''
-# {{informal}} A chance to catch one’s breath.<!--5-->
+# {{UK|informal}} A chance to catch one’s breath.<!--5-->
 #: ''The players were able to get a '''blow''' during the last timeout.''
 # {{uncountable|slang}} [[cocaine|Cocaine]].<!--3-->
 
+=====Translations=====
 {{trans-top|strong wind}}
 * Finnish: [[puhuri]], [[kova]] [[tuuli]]
 * German: {{t+|de|Böe|f}}
