--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -345,7 +345,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 #*: How '''blows''' the citron grove.
 
 ====Translations====
-{{trans-see|to blossom}}
+{{trans-see|blossom}}
 
 ====Noun====
 {{en-noun}}
