--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Etymology===
+From earlier {{term|seise|lang=en}}, from {{etyl|enm}} {{term|seisen|lang=enm}}, {{term|seysen|lang=enm}}, {{term|sesen|lang=enm}}, {{term|ceesen|lang=enm}}, {{term|saisen|lang=enm}}, {{term|saysen|lang=enm}}, from {{etyl|fro}} {{term|saisir|lang=fro}}, {{term|seisir|lang=enm||put one in possession of, take possessino of, seize}} (cf. modern French {{term|saisir||to seize|lang=fr}}), from Frankish {{etyl|la}} {{term|sacire|sacīre|take possession of, lay hold of, seize another's property|lang=la}} (8th century) in the phrase {{term||ad propriam sacire}}. Ultimately borrowed from some Germanic source; cf {{proto|Germanic|lang=|satjanan|to place}}, whence also English {{term|set|lang=en}}.
+
 ===Pronunciation===
 * {{enPR|sēz}}, {{IPA|/siːz/}}, {{SAMPA|/si:z/}}
 * {{audio|en-us-seize.ogg|Audio (US)}}
