--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -15,7 +15,7 @@ From the {{etyl|fa}} {{fa-Arab|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning
 {{wikipedia}}
 {{en-noun|-}} {{pluralonly}}
 
-# {{US}} [[Clothes]] for wearing to bed and sleeping in, usually consisting of a loose-fitting shirt and pants.
+# {{US}} [[clothes|Clothes]] for wearing to bed and sleeping in, usually consisting of a loose-fitting shirt and pants.
 # Loose-fitting [[trousers]] worn by both sexes in various southern Asian countries including [[India]].
 
 ====Translations====
@@ -47,14 +47,13 @@ From the {{etyl|fa}} {{fa-Arab|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning
 {{trans-bottom}}
 
 ====Derived terms====
-* [[cat's pajamas|cat’s pajamas]]
+* [[cat's pajamas]]
 
 ====See also====
 * [[nightshirt]]
 * [[nightie]]
 
-<!-- NOTE: If you edit this page, please also edit "pyjamas" -->
-
+<!-- NOTE: If you edit this page, please also update "pyjamas" if necessary-->
 [[Category:Clothing]]
 
 [[et:pajamas]]
