--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -268,6 +268,7 @@ From {{etyl|sga|gv}} {{term|mil|lang=sga}}.
 [[pl:mill]]
 [[pt:mill]]
 [[ru:mill]]
+[[simple:mill]]
 [[fi:mill]]
 [[ta:mill]]
 [[te:mill]]
