/* Verb */ + sense: adapt/interpret <bend#8124862>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -12,22 +12,24 @@ From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend
 ===Verb===
 {{en-verb|bends|bending|bent}}
 
-# {{transitive}} To cause (something) to change its shape into a [[curve]], by [[physical]] [[force]], [[chemical]] action, or any other means.
+# {{transitive}} To cause (something) to change its shape into a [[curve]], by [[physical]] [[force]], [[chemical]] action, or any other means. <!--accomplishment,achievement-->
 #: ''If you '''bend''' the pipe too far, it will break.''
 #: ''Don’t '''bend''' your knees.''
-# {{transitive|intransitive}} To force or be forced to submit.
-#: ''They '''bent''' me to their will.''
-#: ''I am '''bending''' to my desire to eat junk food.''
-# {{context|transitive|nautical}} To [[tie]], as in [[securing]] a line to a [[cleat]]; to [[shackle]] a [[chain]] to an [[anchor]]; make [[fast]].
-#: '''''Bend''' the sail to the yard.''
-# {{context|transitive|music}} To smoothly change the pitch of a note.
-#: ''You should '''bend''' the G slightly sharp in the next measure.''
-# {{context|intransitive|nautical}} To [[swing]] the [[body]] when [[rowing]].
-# {{intransitive}}  To become [[curve]]d.
+# {{intransitive}}  To become [[curve]]d. <!--activity,accomplishment-->
 #: ''Look at the trees '''bending''' in the wind.''
 #: ''To bow properly, '''bend''' at the waist.''
-# {{intransitive}} To change direction.
+# {{rfd-redundant}} {{intransitive}} To change direction. <!--state,activity-->
 #: ''The road '''bends''' to the right''
+# {{transitive}} To force to submit. <!--accomplishment,achievement-->
+#: ''They '''bent''' me to their will.''
+# {{intransitive}} To submit.<!--state?,activity-->
+#: ''I am '''bending''' to my desire to eat junk food.''
+# {{transitive}} To adapt or interpret to for a purpose or beneficiary.<!--accomplishment--> 
+# {{transitive|nautical}} To [[tie]], as in [[securing]] a line to a [[cleat]]; to [[shackle]] a [[chain]] to an [[anchor]]; make [[fast]].<!--accomplishment,achievement-->
+#: '''''Bend''' the sail to the yard.''
+# {{transitive|music}} To smoothly change the pitch of a note.<!--activity,accomplishment-->
+#: ''You should '''bend''' the G slightly sharp in the next measure.''
+# {{intransitive|nautical}} To [[swing]] the [[body]] when [[rowing]].<!--activity-->
 
 ====Derived terms====
 * [[bend down]]
