--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -18,12 +18,17 @@ From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend
 # {{intransitive}}  To become [[curve]]d. <!--activity,accomplishment-->
 #: ''Look at the trees '''bending''' in the wind.''
 #: ''To bow properly, '''bend''' at the waist.''
-# {{rfd-redundant}} {{intransitive}} To change direction. <!--state,activity-->
+# {{transitive}] To cause to change direction.
+# {{intransitive}} To change direction. <!--state,activity-->
 #: ''The road '''bends''' to the right''
 # {{transitive}} To force to submit. <!--accomplishment,achievement-->
 #: ''They '''bent''' me to their will.''
 # {{intransitive}} To submit.<!--state?,activity-->
 #: ''I am '''bending''' to my desire to eat junk food.''
+# {{transitive}} To apply to a task or purpose.<!--state?,activity-->
+#: ''He '''bent''' company's resources to gaining market share.''
+# {{intransitive}} To apply oneself to a task or purpose.<!--state?,activity-->
+#: ''He '''bent''' to the goal of gaining market share.''
 # {{transitive}} To adapt or interpret to for a purpose or beneficiary.<!--accomplishment--> 
 # {{transitive|nautical}} To [[tie]], as in [[securing]] a line to a [[cleat]]; to [[shackle]] a [[chain]] to an [[anchor]]; make [[fast]].<!--accomplishment,achievement-->
 #: '''''Bend''' the sail to the yard.''
