--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -17,10 +17,11 @@ From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend
 #: ''Don’t '''bend''' your knees.''
 # {{intransitive}}  To become [[curve]]d. <!--activity,accomplishment-->
 #: ''Look at the trees '''bending''' in the wind.''
-#: ''To bow properly, '''bend''' at the waist.''
 # {{transitive}} To cause to change direction.
 # {{intransitive}} To change direction. <!--state,activity-->
 #: ''The road '''bends''' to the right''
+# {{intransitive|usually|with "down"}} To [[stoop]].
+#: ''He '''bent''' down to pick up the pieces.''
 # {{transitive}} To force to submit. <!--accomplishment,achievement-->
 #: ''They '''bent''' me to their will.''
 # {{intransitive}} To submit.<!--state?,activity-->
