header Translations to L5, trans link [[Sicilian]] <blow#8132901>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -119,7 +119,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * [[Romansch]]: {{t|rm|sufflar|xs=Romansch}}
 * Russian: [[дуть]] (dut') {{impf}}, [[дунуть]] (dúnut') {{pf}}; [[сморкаться]] (smorkát's'a) {{impf}}, [[сморкнуться]] (smorknút's'a) {{pf}} ''blow the nose''
 * [[Scottish Gaelic]]: [[séid]]
-* Sicilian: [[ciusciari]]
+* [[Sicilian]]: [[ciusciari]]
 * Slovene: {{t+|sl|pihati}}
 * Spanish: {{t+|es|soplar}}
 * Vietnamese: [[thổi]]; [[phù]], [[phù phù]] (to blow on food)
@@ -384,7 +384,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 #* {{rfdate}} [[w:John Milton|John Milton]]:
 #*: How '''blows''' the citron grove.
 
-====Translations====
+=====Translations=====
 {{trans-see|blossom}}
 
 ====Noun====
@@ -400,7 +400,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 =====Related terms=====
 * [[ablow]]
 
-====Translations====
+=====Translations=====
 {{trans-top|mass or display of flowers}}
 * Finnish: {{t|fi|kukkaloisto}}
 {{trans-mid}}
