/* Pronunciation */ correction <beheld#8136621>

--- a/en/b/beheld.6791.wikitext
+++ b/en/b/beheld.6791.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|/ˈbɪ.hεld/}}, {{SAMPA|/"bI.hEld/}}
+* {{IPA|/bɪˈhεld/}}, {{SAMPA|/bI"hEld/}}
 
 ===Verb===
 '''beheld'''
