/* Translations */ link; * French: [[allogamie]] <allogamy#8139145>

--- a/en/a/allogamy.775548.wikitext
+++ b/en/a/allogamy.775548.wikitext
@@ -10,7 +10,8 @@
 *{{pedia}}
 
 ====Translations====
-* Bulgarian: кръстосано опрашване
+* Bulgarian: [[кръстосано опрашване]]
+* French: [[allogamie]]
 
 [[id:allogamy]]
 [[ta:allogamy]]
