/* Translingual */ ls, wording <月#8141733>

--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -1,8 +1,13 @@
 ==Translingual==
 {{stroke order|type=animate}}
+{{stroke order}}
 
 ===Etymology===
-月 is a pictographic representation, originally of the [[crescent]] [[moon]]. The meaning ''[[Monday]]'' is a borrowing. 
+{{liushu|p}}, originally of the [[crescent]] [[moon]].
+
+As part of a character the pictograph 月 is also used to stand for [[Index:Chinese radical/肉|肉]], especially for parts of the body such as {{term|背||back|sc=Hani}}.
+
+The meaning {{term|Monday}} is a borrowing, via the [[calque]] {{term|月曜日||moon-(day of week)|sc=Hani}}
 
 {{Han etyl}}
 
@@ -13,8 +18,6 @@
 # [[month]]
 # KangXi radical 74 [[Index:Chinese radical/月|月]]
 
-====Usage notes====
-As part of a character the pictograph 月 is also used to stand for [[Index:Chinese radical/肉|肉]].
 
 ====References====
 * {{Han ref|kx=0504.190|dkj=14330|dj=0879.200|hdz=32041.010|uh=6708|ud=26376|bh=A4EB|bd=42219}}
