--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -3,7 +3,7 @@
 [[Image:Ilder.jpg|thumb|Ferrets (Mustela putorius)]]
 
 ===Etymology===
-{{etyl|enm}} ''furet, ferret'', from [[Anglo-French]] ''firet, furet'', diminutive of {{etyl|fro}} ''fuiron'' 'weasel, ferret', from {{etyl|LL.}} ''furo, -onem'' 'cat; robber', diminutive of {{etyl|la}} ''[[fur#Latin|fur]]'' ‘thief’.
+{{etyl|enm}} {{term|furet|lang=enm}}, {{term|ferret|lang=enm}}, from [[Anglo-French]] ''firet, furet'', diminutive of {{etyl|fro}} {{term|fuiron||weasel, ferret|lang=fro}}, from {{etyl|LL.}} {{term|furo||cat; robber|lang=la}}, diminutive of {{etyl|la}} {{term|fur||thief|lang=la}}.
 
 ===Pronunciation===
 * {{enPR|fĕr'ət}}, {{IPA|/ˈfɛrɪt/}}, {{SAMPA|/"fer@t/}}
