--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -143,6 +143,7 @@ The translations below need to be checked by native speakers and inserted into t
 [[ar:bamboo]]
 [[cs:bamboo]]
 [[et:bamboo]]
+[[el:bamboo]]
 [[fa:bamboo]]
 [[fr:bamboo]]
 [[io:bamboo]]
