--- a/en/v/vote with one's feet.774902.wikitext
+++ b/en/v/vote with one's feet.774902.wikitext
@@ -25,7 +25,7 @@
 * {{trreq|Chinese}}
 * {{trreq|Czech}}
 * {{trreq|Dutch}}
-* {{trreq|Finnish}}
+* Finnish: {{t|fi|äänestää jaloillaan}}
 * {{trreq|French}}
 * {{trreq|German}}
 {{trans-mid}}
