+t table <irregular galaxy#8154870>

--- a/en/i/irregular galaxy.802551.wikitext
+++ b/en/i/irregular galaxy.802551.wikitext
@@ -14,6 +14,11 @@
 * [[dwarf irregular galaxy]]
 * [[barred irregular galaxy]]
 
+====Translations====
+{{trans-top|galaxy which has no spiral and is not elliptical}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ===See also===
 *[[elliptical galaxy]]
 *[[lenticular galaxy]]
