--- a/en/i/irregular galaxy.802551.wikitext
+++ b/en/i/irregular galaxy.802551.wikitext
@@ -16,6 +16,7 @@
 
 ====Translations====
 {{trans-top|galaxy which has no spiral and is not elliptical}}
+* Esperanto: {{t|eo|malregula galaksio}}
 {{trans-mid}}
 {{trans-bottom}}
 
