--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -43,6 +43,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Italian: {{t-|it|bambù|m}}
 * Japanese: [[竹]] (たけ, take)
 * Lao: {{t-|lo|ໄມ້ໄຜ່|tr=mai-phai|sc=Laoo|xs=Lao}}
+* Latin: {{t|la|harundo Indica|f|alt=harundō Indica}}
 * [[Macedonian]]: {{t-|mk|бамбус|m|tr=bámbus}}
 * Malay: [[pokok]] [[buluh]]
 * Navajo: {{tø|nv|tłʼohtsoh ntłʼizígíí}}
