--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -40,7 +40,7 @@
 ====Translations====
 {{trans-top|mammal of genus ''Sus''}}
 * [[Afrikaans]]: [[vark]]
-* Albanian: [[derr]] {{g|Albanian}}
+* Albanian: {{t+|sq|derr|m}}, {{t+|sq|thi|m}}
 * [[Amuzgo]]: [[kítzku]]
 * Arabic: {{Arab|[[خنزير]]}} (xanzīr) {{m}}
 *: Morocco: {{Arab|[[حلوف]]}} (ħalūf)
@@ -62,6 +62,7 @@
 * [[Chamorro]]: [[babui]]
 * Cherokee: [[ᏏᏆ]] (siqua)
 * Chinese: [[豬]], [[猪]] (zhū)
+* Cornish: {{t+|kw|hogh|m}}, {{t+|kw|mogh|p}}
 * Croatian: {{t+|hr|svinja|f}}
 * Czech: {{t+|cs|prase|n}}
 * Danish: {{t+|da|svin|n}}
@@ -91,8 +92,8 @@
 * Korean: [[돼지]] (dwaeji)
 * Kurdish: {{ku-Arab|[[به‌راز]]}} {{g|Kurdish}}
 * [[Ladin]]: [[porcel]]
-* Latin: [[sus]] {{c}}, [[porcus]] {{m}}<!--do not put the scientific name here-->
 {{trans-mid}}
+* Latin: [[sus]] {{c}}, [[porcus]] {{m}}<!--do not put the scientific name here-->
 * Latvian: {{t+|lv|cūka|f|xs=Latvian}}
 * Lithuanian: [[kiaulė]] {{g|Lithuanian}}
 * [[Lower Sorbian]]: [[swinja]] {{f}}
