/* Translations */ remove extra | from a fi line <pig#8159940>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -186,7 +186,7 @@
 * Armenian: {{t-|hy|խոզ|tr=xoz}}
 * Bosnian: {{t-|bs|svinja|f}}
 * Dutch: {{t+|nl|varken|n}}
-* Finnish: {{t|fi||sika}}, {{t|fi|sottapytty}}
+* Finnish: {{t|fi|sika}}, {{t|fi|sottapytty}}
 * French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}
 * German: {{t+|de|Schwein|n}}
 * Greek: {{t+|el|γουρούνι|n|tr=gouroúni}}
