--- a/en/c/colluvium.803610.wikitext
+++ b/en/c/colluvium.803610.wikitext
@@ -5,6 +5,10 @@
 {{en-noun|colluvia}}
 
 #{{geology}} A loose accumulation of [[rock]] and [[soil]] [[debris]] at the foot of a slope
+====Translations====
+{{trans-top}}
+{{trans-mid}}
+{{trans-bottom}}
 
 [[ar:colluvium]]
 [[id:colluvium]]
