t+fr:[[colluvion]] t-balance t+de:[[Kolluvium]] t+it:[[colluvium]] ([[WT:EDIT|Assisted]]) <colluvium#8166826>

--- a/en/c/colluvium.803610.wikitext
+++ b/en/c/colluvium.803610.wikitext
@@ -7,7 +7,10 @@
 #{{geology}} A loose accumulation of [[rock]] and [[soil]] [[debris]] at the foot of a slope
 ====Translations====
 {{trans-top}}
+* French: {{t|fr|colluvion|m}}
+* German: {{t|de|Kolluvium}}
 {{trans-mid}}
+* Italian: {{t|it|colluvium}}
 {{trans-bottom}}
 
 [[ar:colluvium]]
