--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -47,6 +47,7 @@
 * Albanian: {{t-|sq|lepur i gropave|xs=Albanian}}
 * Arabic: {{t-|ar|ارنب|m|alt=أرْنَب|tr=’árnab}}
 * Armenian: [[ճագար]] (č̣agar)
+* [[Azeri]]: {{t|az|dovşan}}
 * [[Basque]]: [[untxi]]
 * Belarusian: [[трусяня]]/[[трусяне]] {{f}}, {{t|be|трус|m|xs=Belarusian}}
 * Bengali: {{BNchar|[[খরেগাশ]]}}
