iwiki +[[:ml:mill]] <mill#8174346>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -263,6 +263,7 @@ From {{etyl|sga|gv}} {{term|mil|lang=sga}}.
 [[kk:mill]]
 [[la:mill]]
 [[hu:mill]]
+[[ml:mill]]
 [[no:mill]]
 [[oc:mill]]
 [[pl:mill]]
