--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -31,6 +31,7 @@
 
 ====Translations====
 {{trans-top|however}}
+* Czech: {{t|cs|nicméně}}
 * Dutch: {{t+|nl|echter}}
 * Finnish: {{t+|fi|kuitenkin}}
 * French: {{t+|fr|néanmoins}}
