--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -73,6 +73,7 @@
 * [[Macedonian]]: {{t-|mk|реклама|f|tr=rekláma}}
 * Malay: {{t-|ms|iklan|xs=Malay}}
 * Maltese: [[riklam]], [[pubbliċità]], [[tgħarif kummerċjali]]
+* Navajo: {{tø|nv|óʼoolkąąh}}
 * Norwegian: [[reklame]] [[annonse]]
 * Polish: [[ogłoszenie]] {{n}}, [[reklama]] {{f}}, [[anons]] {{m}}
 * Portuguese: {{t+|pt|anúncio|m}}, {{t+|pt|publicidade|f}}, {{t-|pt|reclame|m}}, {{t+|pt|propaganda|f}}
