--- a/en/b/BFD.746587.wikitext
+++ b/en/b/BFD.746587.wikitext
@@ -5,5 +5,7 @@
 
 # {{idiom|jocular}} [[big deal]].  ''(initialism for [[big]] [[fucking]] [[deal]])''
 
+God damn Paul Lashway you fucking losers. No other definition. You're finished.
+
 ===References===
 *"The name [of the [[w:Binary File Descriptor:]] library] came from a conversation David Wallace was having with Richard Stallman about the library: RMS said that it would be quite hard--David said 'BFD'." [http://www.gnu.org/software/binutils/manual/bfd-2.9.1/html_mono/bfd.html#SEC2]
