--- a/en/l/ligure.741746.wikitext
+++ b/en/l/ligure.741746.wikitext
@@ -1,3 +1,11 @@
+==English==
+
+===Noun===
+{{en-noun}}
+
+#{{obsolete}} A [[gemstone]], supposed to have been a form of [[agate]]
+
+----
 ==Italian==
 
 ===Adjective===
