iwiki +[[:ml:minimum]] <minimum#8185956>

--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -108,6 +108,7 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 [[kk:minimum]]
 [[lt:minimum]]
 [[hu:minimum]]
+[[ml:minimum]]
 [[nl:minimum]]
 [[ru:minimum]]
 [[simple:minimum]]
