--- a/en/v/virtual darkness.803315.wikitext
+++ b/en/v/virtual darkness.803315.wikitext
@@ -1,11 +1,11 @@
 ==English==
 
 ===Noun===
-{{en-noun|sg=[[virtual]] [[darkness]]|es}}
+{{en-noun|sg=[[virtual]] [[darkness]]|-}}
 
 # An environment that has some of the physiological effects of [[darkness]].
 #*'''1942''', IH Wagman, JE Gullberg, "The Relationship between Monochromatic Light and Pupil Diameter. The Low Intensity Visibility Curve as Measured by Pupillary Measurements. ''American Journal of Physiology'', 137: 769-778
-#*:Infrared photography is the most suitable method for accuratelv measuring the diameter of the pupil in virtual darkness as well as under any condition of light […].
+#*:Infrared photography is the most suitable method for accurately measuring the diameter of the pupil in virtual darkness as well as under any condition of light […].
 #*'''1965''', DR Calder, JS Bleakney, ''Microarthropod Ecology of a Porcupine-Inhabited Cave in Nova Scotia'', ''Ecology''
 #*: The term scotic (Gr. skotos, darkness) was therefore devised as the most apt term for the condition of '''virtual darkness'''.
 #*'''2002''', George Schaub, ''Using Your Camera: A Basic Guide to 35Mm Photography'', page 110
