--- a/en/s/synæresis.742365.wikitext
+++ b/en/s/synæresis.742365.wikitext
@@ -9,4 +9,4 @@
 #* '''1985''': Charles-James N. Bailey, <i>[http://www.ethnologue.com/ Ethnoloɠue, Languages of the World]: [http://www.ethnologue.com/show_product.asp?isbn=0883120003 English Phonetic Transcription]</i> ([[ISBN-13]]: 978–0–88312–000–2; [[ISBN-10]]: 0–88312–000–3), chapter 9 title
 #*: '''Synæresis''', spirantization, and sonorant-degemination
 
-[[Category:English words spelled with ligatures|synaeresis]]
+[[Category:English terms spelled with Æ]]
