--- a/en/u/untimeliness.742256.wikitext
+++ b/en/u/untimeliness.742256.wikitext
@@ -6,6 +6,7 @@
 
 ====Translations====
 {{trans-top|state of being untimely}}
+* Estonian: {{t|et|ajakohatus}}
 * Finnish: {{t+|fi|huono}} {{t-|fi|ajoitus}}; {{t|fi|ennenaikaisuus}}
 {{trans-mid}}
 {{trans-bottom}}
