--- a/en/a/allogamy.775548.wikitext
+++ b/en/a/allogamy.775548.wikitext
@@ -10,8 +10,12 @@
 *{{pedia}}
 
 ====Translations====
+{{trans-top|fertilization}}
 * Bulgarian: [[кръстосано опрашване]]
 * French: {{t+|fr|allogamie}}
+{{trans-mid}}
+* Spanish: {{t|es|alogamia|f}}
+{{trans-bottom}}
 
 [[id:allogamy]]
 [[ta:allogamy]]
