/* Portuguese */ Cardinal numeral <quatorze#8201030>

--- a/en/q/quatorze.26056.wikitext
+++ b/en/q/quatorze.26056.wikitext
@@ -29,7 +29,7 @@ From {{etyl|la|fr}} {{term|quattuordecim|lang=la}}.
 ===Etymology===
 From {{etyl|la|pt}} {{term|quattuordecim|lang=la}}.
 
-===Cardinal number===
+===Cardinal numeral===
 {{pt-cardinal}}
 
 # [[fourteen]].
