t+it:[[lepre]] ([[WT:EDIT|Assisted]]) <rabbit#8202400>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -152,6 +152,7 @@
 {{trans-top|pacesetter}}
 * Finnish: {{t+|fi|jänis}}
 {{trans-mid}}
+* Italian: {{t|it|lepre|f}}
 {{trans-bottom}}
 
 {{trans-top|poor batsman}}
