iwiki +[[:it:think through]] <think through#8203002>

--- a/en/t/think through.720293.wikitext
+++ b/en/t/think through.720293.wikitext
@@ -6,3 +6,5 @@
 # To fully [[consider]] an action, and understand all its [[consequence]]s
 [[Category:English phrasal verbs]]
 [[Category:English verbs]]
+
+[[it:think through]]
