iwiki +[[:lt:blow]] <blow#8220849>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -433,6 +433,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 [[kn:blow]]
 [[kk:blow]]
 [[ku:blow]]
+[[lt:blow]]
 [[li:blow]]
 [[hu:blow]]
 [[ml:blow]]
