--- a/en/1/1 Macc_.801825.wikitext
+++ b/en/1/1 Macc_.801825.wikitext
@@ -1,6 +1,9 @@
 ==English==
+
 ==={{abbreviation}}===
 {{infl|en|abbreviation}}
+
 # {{biblical}} An abbreviation used for [[1 Maccabees]] of the [[Old Testament]] [[Apocrypha]].
 
 [[Category:Books of the Bible]]
+[[Category:English terms spelled with 1]]
