--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -21,6 +21,8 @@
 #*: Merlyn warned the kynge couertly that gweneuer was not holsome for hym to take to wyf, for he warned hym that launcelot shold loue her and she hym '''ageyne''' {{...}}
 #*:: Merlin warned the king covertly that Guinevere was not wholesome for him to take as his wife, for he warned him that Lancelot should love her and she him '''again''' {{...}}
 # [[back|Back]] (to a former place or state).
+#*'''1526''', ''The Bible'', tr. William Tyndale, Matthew 2:
+#*:And after they were warned in ther slepe, that they shulde not go '''ageyne''' to Herod, they retourned into ther awne countre another way.
 #: ''We need to bring the old customs to life '''again'''.''
 #: ''The South will rise '''again'''.''
 # Another time; once more.
