t+ru:[[голосовать ногами]] ([[WT:EDIT|Assisted]]) <vote with one's feet#8230630>

--- a/en/v/vote with one's feet.774902.wikitext
+++ b/en/v/vote with one's feet.774902.wikitext
@@ -35,7 +35,7 @@
 * {{trreq|Korean}}
 * {{trreq|Polish}}
 * {{trreq|Portuguese}}
-* {{trreq|Russian}}
+* Russian: {{t|ru|голосовать ногами|tr=golosovát' nogámi|sc=Cyrl}}
 * {{trreq|Spanish}}
 * {{trreq|Vietnamese}}
 {{trans-bottom}}
