t+it:[[scommettere]] t-balance ([[WT:EDIT|Assisted]]) <bet#8261337>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -74,6 +74,7 @@
 * Hebrew: {{t|he|להתערב}} (le'hitarev)
 {{trans-mid}}
 * Indonesian: {{t-|id|taruh|xs=Indonesian}}
+* Italian: {{t|it|scommettere}}
 * Japanese: {{t|ja|賭ける}} ([[かける]], kakeru)
 * Latvian: {{t|lv|derēt|xs=Latvian}}
 * Norwegian: {{t|no|vedde}}
