t+he:[[אצל]] ([[WT:EDIT|Assisted]]) <at#8262228>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -53,6 +53,7 @@
 * French: {{t+|fr|à}}, {{t+|fr|en}}
 * German: {{t+|de|an}}, {{t+|de|auf}}, {{t+|de|bei}}, {{t+|de|in}}
 * Greek: [[στον]] (ston) {{m}}, [[στη]] (sti) {{f}}, [[στο]] (sto) {{n}}; [[στους]] (stous) {{m|p}}, [[στις]] (stis) {{f|p}}, [[στα]] (sta) {{n|p}}
+* Hebrew: {{t|he|אצל|alt=אֵצֶל|sc=Hebr}}
 * Hungarian: [[-n]] / [[-on]] / [[-en]] / [[-ön]] ''([[superessive case]])''; [[-nál]] / [[-nél]] ''([[adessive case]])''
 * [[Ido]]: [[ye]]
 * [[Interlingua]]: [[a#Interlingua|a]], [[in#Interlingua|in]]
