--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -3,7 +3,7 @@
 [[Image:Mustela frenata.jpg|thumb|A weasel ''Mustela frenata'' (2)]]
 
 ===Etymology===
-From {{etyl|ang|en}} {{term|weosule||lang=ang}}, cognates in other Germanic languages (Dutch {{term|wezel||lang=ne}}, German {{term|Wiesel||lang=de}}, Frisian {{term|wezeling||lang=fy}}), but has no known cognates in other Indo-European language groups.
+{{etyl|enm}} {{term|wesele}}, from {{etyl|ang|en}} {{term|weosule||lang=ang}}, from {{proto|Germanic}} *''wisulon'' (cf. {{etyl|fy|-}} {{term|wezeling||lang=fy}}, {{etyl|nl|-}} {{term|wezel||lang=nl}}, {{etyl|de|-}} {{term|Wiesel||lang=de}}), from {{proto|Indo-European}} *''u̯iselos'' (cf. [[Irish]] {{term|fíal}} 'ferret'), from *''u̯is''- 'stink, fetid' (cf. {{etyl|la|-}} {{term|virus}} 'slimy liquid, mud, stench', {{etyl|sa|-}} {{term|visra}} 'musty, smelling of raw meat').
 
 ===Pronunciation===
 * {{IPA|/'wiːzəl/}}
