t+es:[[desazón]] ([[WT:EDIT|Assisted]]) <insipidness#8273222>

--- a/en/i/insipidness.855031.wikitext
+++ b/en/i/insipidness.855031.wikitext
@@ -20,7 +20,7 @@
 
 ====Translations====
 {{trans-top|lack of distinctive, appealing, or energetic character}}
-* Spanish: {{t|es|insipidez|f}}
+* Spanish: {{t|es|insipidez|f}},  {{t|es|desazón|f}}
 {{trans-mid}}
 {{trans-bottom}}
 
