-{{top}} +{{trans-top}} <sabre-toothed tiger#8273317>

--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -10,13 +10,13 @@
 # Any of numerous [[species]] of [[prehistoric]] cat-like [[mammals]]. A cat of the [[Machairodontinae]] subfamily of the [[Felidae]].
 
 ====Translations====
-{{top}}
+{{trans-top}}
 * Finnish: {{t-|fi|sapelihammastiikeri}}
 * German: {{t+|de|Säbelzahntiger|m}}
-{{mid}}
+{{trans-mid}}
 * Portuguese: {{t-|pt|tigre-dente-de-sabre|m}}
 * Spanish: {{t|es|diente de sable|m}}
-{{bottom}}
+{{trans-bottom}}
 
 ===Anagrams===
 * {{alphagram|abdeeeghioorrsttt}}
