/* Cardinal number */ <octillion#8273493>

--- a/en/o/octillion.34109.wikitext
+++ b/en/o/octillion.34109.wikitext
@@ -15,8 +15,8 @@ From the prefix ''[[oct-]]'' (''eight'') + ''[[-illion]]'' (from [[million]]); [
 # (''dated British & Australian, [[w:Long and short scales|long scale]]'') A [[quadrillion]] [[quintillion]]: 1 followed by 48 zeros, 10<sup>48</sup>.
 
 * ''Western (Arabic) Numeral'' '''octillion''', '''10<sup>27</sup>''' [[w:Long and short scales|short scale]], '''10<sup>48</sup>''' [[w:Long and short scales|long scale]]
-** [[Previous]]: [[septillion]]: [[w:Long and short scales|short scale]] 10<sup>24</sup>, [[w:Long and short scales|long scale]] 10<sup>42</sup>
-** [[Next]]: [[nonillion]]: [[w:Long and short scales|short scale]] 10<sup>30</sup>, [[w:Long and short scales|long scale]] 10<sup>54</sup>
+** Previous: [[septillion]]: [[w:Long and short scales|short scale]] 10<sup>24</sup>, [[w:Long and short scales|long scale]] 10<sup>42</sup>
+** Next: [[nonillion]]: [[w:Long and short scales|short scale]] 10<sup>30</sup>, [[w:Long and short scales|long scale]] 10<sup>54</sup>
 
 ====Synonyms====
 * 10<sup>48</sup>: a [[w:Long and short scales|short scale]] [[quindecillion]]
