sorted/rebalanced translations, trans unlink Kazakh <squirrel#8278539>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -56,14 +56,14 @@ From {{etyl|xno}} ''[[esquirel]]'', from {{etyl|fro}} ''[[escurel]]'' (modern {{
 * Italian: {{t-|it|scoiattolo|m}}
 * Japanese: {{t-|ja|栗鼠|tr=りす, risu}}
 * [[Karachay-Balkar]]: {{tø|krc|эрлен|tr=erlen|sc=Cyrl}},  {{qualifier|karachay}} {{tø|krc|агъач къоян|tr=ağaç qoyan|sc=Cyrl}},  {{qualifier|obsolete}} {{tø|krc|тыйын|tr=tıyın|sc=Cyrl}}
-* [[Kazakh]]: {{t|kk|тиін|tr=tiïn|sc=Cyrl}}
+* Kazakh: {{t|kk|тиін|tr=tiïn|sc=Cyrl}}
 * [[Khakas]]: {{tø|kjh|тиин|tr=tiin|sc=Cyrl}}
 * Korean: {{t+|ko|다람쥐|tr=daramjwi|sc=Hang}}
 * [[Kumyk]]: {{tø|kum|атъялман|tr=atyalman|sc=Cyrl}}
 * Kurdish: {{ku-Arab|[[سیمۆره‌]]}}
-{{trans-mid}}
 * [[Kyrgyz]]: {{t|ky|тыйын чычкан|tr=tıyın çıçqan|sc=Cyrl}}
 * [[Ladin]]: [[schirata]] {{f}}
+{{trans-mid}}
 * Latin: {{t+|la|sciurus|m}}
 * Latvian: {{t-|lv|vāvere|f|xs=Latvian}}
 * Lithuanian: {{t+|lt|voverė|f|xs=Lithuanian}}
