t+el:[[σέρ]] ([[WT:EDIT|Assisted]]) <sir#8341306>

--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -35,6 +35,7 @@
 {{trans-top| man of a higher rank or position}}
 * Dutch: {{t+|nl|heer|m}}, {{t+|nl|meneer|m}}
 {{trans-mid}}
+* Greek: {{t|el|σέρ|sc=Grek}}
 {{trans-bottom}}
 
 {{trans-top|address to a military superior}}
