trans, trreq <in the know#8341552>

--- a/en/i/in the know.742284.wikitext
+++ b/en/i/in the know.742284.wikitext
@@ -1,12 +1,42 @@
 ==English==
 
-===Adjective===
-{{en-adj}}
+===Alternative spellings===
+* [[in-the-know]]
 
-# [[informed]], [[aware]] (of)
+===Adjective===
+{{en-adj|pos=[[in]] [[the]] [[know]]}}
+
+# [[informed|Informed]], [[aware]].
+#: ''Those '''in the know''' don't shop at that kind of store.''
+#: ''Anyone who is '''in the know''' doesn't shop there.''
+#: ''He appears '''in the know''' about such matters.''
+
+====Usage notes====
+* Rarely used attributively without distinctive marking with hyphens or quotation marks.
 
 ====Translations====
-*French: {{t+|fr|au courant}}
+{{trans-top|informed, aware}}
+* {{trreq|Arabic}}
+* {{trreq|Armenian}}
+* {{trreq|Catalan}}
+* {{trreq|Chinese}}
+* {{trreq|Czech}}
+* {{trreq|Dutch}}
+* {{trreq|Finnish}}
+* French: {{t+|fr|au courant}}
+* {{trreq|German}}
+{{trans-mid}}
+* {{trreq|Hindi}}
+* {{trreq|Italian}}
+* {{trreq|Japanese}}
+* {{trreq|Korean}}
+* {{trreq|Polish}}
+* {{trreq|Portuguese}}
+* {{trreq|Russian}}
+* {{trreq|Serbo-Croatian}}
+* {{trreq|Spanish}}
+* {{trreq|Vietnamese}}
+{{trans-bottom}}
 
 [[Category:English prepositional phrases]]
 
