checktrans fi, sv <cauliflower#8342265>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -26,6 +26,7 @@
 *: Mandarin: {{t|cmn|花椰菜|tr=huāyēcài|sc=Hani}},  {{t|cmn|菜花|tr=càihuā|sc=Hani}}
 * Czech: {{t-|cs|květák|m}}, {{t-|cs|karfiól|m}}
 * Dutch: {{t+|nl|bloemkool}}
+* Finnish: {{t+|fi|kukkakaali}}
 * French: {{t+|fr|chou-fleur|m}}
 * German: {{t+|de|Blumenkohl|m}},  ''(Austrian:)'' {{t|de|Karfiol|m}}
 {{trans-mid}}
@@ -38,6 +39,7 @@
 * Polish: {{t+|pl|kalafior|m}}
 * Russian: {{t+|ru|цветная капуста|f|tr=cvetnája kapústa}}
 * [[Sotho]]: {{t|st|kholifolawa|xs=Sotho}}
+* Swedish: {{t+|sv|blomkål|c}}
 * Turkish: {{t+|tr|karnabahar}}
 {{trans-bottom}}
 
@@ -58,7 +60,6 @@
 * Danish: {{t+|da|blomkål}}
 * Dutch: {{t+|nl|bloemkool|f}}
 * Esperanto: {{t+|eo|florbrasiko|xs=Esperanto}}
-* Finnish: {{t+|fi|kukkakaali}}
 * [[West Frisian]]: [[blomkoal]]
 * Hebrew: [[כרובית]] (kruvít) {{f}}
 * Hindi: [[गोभी]] (gobhī)
@@ -78,7 +79,6 @@
 * Slovak: {{t-|sk|karfiol|m}}
 * Slovene: [[cvetača]] {{f}}
 * Spanish: [[coliflor]] {{f}}, [[pella]] {{f}} {{italbrac|Northern Spain|specifically Navarra|Spanish Basque Country|Aragon|and La Rioja}}
-* Swedish: {{t+|sv|blomkål}}
 * Thai: {{Thai|[[ดอกกะหล่ำ]]}} (dòk gà-làm)
 * Turkish: [[karnabahar]]
 * Ukrainian: [[кучерява капуста]] (kučerǎva kapusta) {{f}}
