t+vi:[[{{trreq}}]] t+ko:[[{{trreq}}]] t+et:[[{{trreq}}]] t+da:[[{{trreq}}]] t+th:[[{{trreq}}]] t+uk:[[{{trreq}}]] t-balance t+eu:[[{{trreq}}]] t+fa:[[{{trreq}}]] t+ka:[[{{trreq}}]] ([[WT:EDIT|Assisted]]) <cauliflower#8342300>

--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -21,27 +21,36 @@
 * [[Afrikaans]]: {{t|af|blomkool|xs=Afrikaans}}
 * Arabic: {{t|ar|قرنبيط|m|tr=qarnabiiT}},  {{t|ar|قنبيط|m|tr=qunnabiiT}}
 * Armenian: {{t-|hy|ծաղկակաղամբ|tr=çaġkakaġamb}}
+* {{trreq|Basque}}
 * Bulgarian: {{t|bg|карнабит|m}},  {{t-|bg|карфиол|m}}
 * Chinese:
 *: Mandarin: {{t|cmn|花椰菜|tr=huāyēcài|sc=Hani}},  {{t|cmn|菜花|tr=càihuā|sc=Hani}}
 * Czech: {{t-|cs|květák|m}}, {{t-|cs|karfiól|m}}
+* {{trreq|Danish}}
 * Dutch: {{t+|nl|bloemkool}}
 * Esperanto: {{t|eo|florbrasiko}}
+* {{trreq|Estonian}}
 * Finnish: {{t+|fi|kukkakaali}}
 * French: {{t+|fr|chou-fleur|m}}
-{{trans-mid}}
+* {{trreq|Georgian}}
 * German: {{t+|de|Blumenkohl|m}},  ''(Austrian:)'' {{t|de|Karfiol|m}}
+{{trans-mid}}
 * Greek: {{t+|el|κουνουπίδι|n|tr=kunupídi}}
 * Hungarian: {{t+|hu|karfiol}}
 * [[Ido]]: {{t|io|florkaulo}}
 * Indonesian: {{t|id|blumkol|xs=Indonesian}}
 * Japanese: {{t-|ja|カリフラワー|tr=karifurawā}}
+* {{trreq|Korean}}
 * [[Macedonian]]: {{t-|mk|карфиол|m|tr=karfiól}}
+* {{trreq|Persian}}
 * Polish: {{t+|pl|kalafior|m}}
 * Russian: {{t+|ru|цветная капуста|f|tr=cvetnája kapústa}}
 * [[Sotho]]: {{t|st|kholifolawa|xs=Sotho}}
 * Swedish: {{t+|sv|blomkål|c}}
+* {{trreq|Thai}}
 * Turkish: {{t+|tr|karnabahar}}
+* {{trreq|Ukrainian}}
+* {{trreq|Vietnamese}}
 {{trans-bottom}}
 
 {{trans-top|Edible head of a cauliflower plant}}
