t+gd:[[cliabh]] t-balance ([[WT:EDIT|Assisted]]) <staff#8345797>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -62,11 +62,12 @@
 * Finnish: {{t-|fi|nuottiviivasto}}
 * French: {{t+|fr|portée|f}}
 * German: [[Notenlinien]] {{f|p}}
-{{trans-mid}}
 * Italian: {{t-|it|pentagramma|m}}
+{{trans-mid}}
 * [[Macedonian]]: {{t|mk|петолиние|n|tr=petolínie}}
 * Polish: {{t|pl|pięciolinia|f}}
 * Portuguese: {{t+|pt|pauta|f}}
+* [[Scottish Gaelic]]: {{t|gd|cliabh|m}}
 * Spanish: {{t-|es|varas|f|p}},  {{t-|es|pauta|f}}, {{t-|es|pentagrama|f}}
 {{trans-bottom}}
 
